2008.02.27

* Moved examples into test dir to serve as the basis for unit tests.
* Added prototype RTF parsing code from Pecha project.
* Added TextEdit test RTF files from Mac OS X.
* Updated TODO.
* Fixed remaining whitespace issue in setup.py.
* Created exceptions file.
* Split grammar into its own file.
* Made grammar module-level variable (singleton) instead of instantiated class.
* Updated TODO.
* Renamed pyrtfng package to rtfng.
* Added test runner for doctests.
* Added test runner for all tests, and added doctest suite to the runner.
* Added a utility module.
* Added code for recursively adding tests.
* Added images to be used in tests to test/resources.
* Updated TODO.
* Added a write method to Document as a temp fix until the refactor.

2008.02.26

* Copied Simon Cusack's PyRTF code from version 0.45 as the starting point of
pyrtf-ng.
* Added ChangeLog.
* Added admin directory and scripts.
* Renamed package to pyrtf-ng.
* Updated setup.py.
* Added software license.
* Added a placeholder test directory.
* Added placeholders for parsing and writing code.
* Added TODO file.
* Updated examples to use the new package name and replaced the tabs with
spaces.
* Whitespace cleanup.
* Updated TODO.
* Fixed name in setup.py.
* Added gzipped specs for reference.
* Bumped the version number down until the API changes.
* TODO reorg and updates.